--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-profile",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://thinhphanngoc97.github.io/MyProfile",
+  "homepage": "https://thinhphanngoc97.github.io/MyProfile/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
